attempted fix on label overflow

--- a/css/resume.css
+++ b/css/resume.css
@@ -15,10 +15,14 @@ header{
     /* padding: 15px; */
 }
 
+
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-rendering: optimizeLegibility;
     }
 
     .row {
@@ -175,6 +179,7 @@ label.language {
         -webkit-box-align: center;
         align-items: center;
     border: 0.5px groove rgb(40, 40, 40);
+    overflow:hidden;
     border-radius: .2rem;
     color: rgb(40, 40, 40);
     display: -ms-inline-flexbox;
